reached a stopping place

--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
 body {background-color: lightblue};
+
+* {
+max-width: 150px;
+max-height: 150px;
+}
+
+countryImgs {
+    max-width: 150px;
+    max-height: 150px;
+    }
